# Aether-SOS

./: README.md
app/andriod/app/src/main/kotlin/com/aether/sos/: MainActivity.kt  WifiNanService.kt
core_mesh/: Cargo.toml
core_mesh/src/: crypto.rs  routing.rs
