[package]
name = "aether_core_mesh"
version = "1.0.0"
edition = "2021"
description = "Core logic and protocol for Aether SOS"

[dependencies]
chacha20poly1305 = "0.10.1"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
geohash = "0.13.0"
lru = "0.12.0"
tokio = { version = "1.0", features = ["full"] }

[lib]
crate-type = ["cdylib", "rlib"] # cdylib for cross-compilation (FFI)
